--- a/package.json
+++ b/package.json
@@ -115,7 +115,8 @@
       "tagName": "v${version}"
     },
     "github": {
-      "release": true
+      "release": true,
+      "draft": true
     },
     "plugins": {
       "@release-it/conventional-changelog": {
