fix: update app

--- a/package.json
+++ b/package.json
@@ -14,52 +14,59 @@
   },
   "private": true,
   "scripts": {
-    "yarn:install": "yarn",
+    "yarn:install": "yarn && cd scripts && yarn",
     "dev:spa": "quasar dev",
+    "dev:spaembed": "cross-env SPAEMBED=true quasar dev",
     "dev:electron": "quasar dev -m electron",
     "dev:pwa": "quasar dev -m pwa",
-    "build:spa": "quasar build",
+    "build:spa": "quasar build && yarn run zip:spa",
+    "build:spaembed": "cross-env SPAEMBED=true quasar build && yarn run zip:spaembed",
     "build:electron": "quasar build -m electron",
-    "build:pwa": "quasar build -m pwa",
+    "build:pwa": "quasar build -m pwa && yarn run zip:pwa",
     "release": "release-it --ci",
-    "release:beta": "release-it --preRelease",
+    "release:beta": "release-it --preRelease=beta",
     "git:reset": "git reset && git checkout .",
+    "zip:spa": "node ./scripts/zip.js SPA",
+    "zip:spaembed": "node ./scripts/zip.js EMBED",
+    "zip:pwa": "node ./scripts/zip.js PWA",
     "lint": "eslint --ext .js,.vue src",
     "lintfix": "eslint --fix --ext .js,.vue src",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "@jaames/iro": "^4.5.3",
-    "@quasar/app": "^1.2.3",
-    "@quasar/extras": "^1.3.2",
+    "@quasar/app": "^1.3.1",
+    "@quasar/extras": "^1.3.3",
     "axios": "^0.19.0",
     "node-ssdp": "^4.0.0",
-    "quasar": "^1.3.0",
+    "quasar": "^1.5.0",
     "vue-draggable-resizable": "^2.0.1",
-    "vue-i18n": "^8.15.0",
+    "vue-i18n": "^8.15.1",
     "vuedraggable": "^2.23.2",
-    "vuex": "^3.1.1",
-    "vuex-persist": "^2.1.1",
+    "vuex": "^3.1.2",
+    "vuex-persist": "^2.2.0",
     "ws": "^7.2.0"
   },
   "devDependencies": {
-    "@quasar/app": "^1.2.3",
+    "@quasar/app": "^1.3.1",
     "@quasar/quasar-app-extension-icon-genie": "^1.1.2",
+    "@quasar/quasar-app-extension-qscroller": "^1.0.3",
     "@release-it/conventional-changelog": "^1.1.0",
-    "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/eslint-config-standard": "^5.0.0",
     "babel-eslint": "^10.0.3",
+    "cross-env": "^6.0.3",
     "devtron": "^1.4.0",
-    "electron": "^6.0.12",
+    "electron": "^6.1.5",
     "electron-builder": "^22.1.0",
     "electron-debug": "^3.0.1",
     "electron-devtools-installer": "^2.2.4",
-    "electron-packager": "^14.1.0",
-    "eslint": "^6.6.0",
+    "electron-packager": "^14.1.1",
+    "eslint": "^6.7.1",
     "eslint-loader": "^3.0.2",
-    "eslint-plugin-vue": "^5.2.3",
+    "eslint-plugin-vue": "^6.0.1",
     "gh-release": "^3.5.0",
     "release-it": "^12.4.3",
-    "standard-version": "^7.0.0",
+    "standard-version": "^7.0.1",
     "webpack": "^4.41.2",
     "worker-loader": "^2.0.0"
   },
