fix: release-it no clean working dir

--- a/package.json
+++ b/package.json
@@ -119,7 +119,8 @@
   "release-it": {
     "git": {
       "commitMessage": "chore(release): v${version}",
-      "tagName": "v${version}"
+      "tagName": "v${version}",
+      "requireCleanWorkingDir": false
     },
     "github": {
       "release": true,
