--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyperion-remote",
-  "version": "0.4.4",
+  "version": "0.4.5",
   "description": "Hyperion Remote Application",
   "homepage": "https://www.hyperion-project.org",
   "productName": "Hyperion Remote",
@@ -38,6 +38,7 @@
     "@quasar/app": "^1.3.1",
     "@quasar/extras": "^1.3.3",
     "axios": "^0.19.0",
+    "global": "^4.4.0",
     "node-ssdp": "^4.0.0",
     "quasar": "^1.5.0",
     "vue-draggable-resizable": "^2.0.1",
