--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build
         run: |
           npm install -g yarn
-          yarn run yarn:install
+          yarn yarn:install
           yarn build:${{ matrix.type }}
       - name: Upload Release Artifacts
         uses: ./.github/actions/upload-release-asset
@@ -44,15 +44,15 @@ jobs:
         - name: Build
           run: |
             npm install -g yarn
-            yarn run yarn:install
+            yarn yarn:install
             yarn build:spa
-      - name: Upload Release Artifacts
-        uses: ./.github/actions/upload-release-asset
-        with:
-          glob_pattern: '**/Hyperion-Remote*[0-999].[0-999].[0-999]*'
-          upload_url: ${{ github.event.release.upload_url }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        - name: Upload Release Artifacts
+          uses: ./.github/actions/upload-release-asset
+          with:
+            glob_pattern: '**/Hyperion-Remote*[0-999].[0-999].[0-999]*'
+            upload_url: ${{ github.event.release.upload_url }}
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   build-spaembed:
     runs-on: ubuntu-latest
     name: spaembed (ubuntu-latest)
@@ -65,15 +65,15 @@ jobs:
         - name: Build
           run: |
             npm install -g yarn
-            yarn run yarn:install
+            yarn yarn:install
             yarn build:spaembed
-      - name: Upload Release Artifacts
-        uses: ./.github/actions/upload-release-asset
-        with:
-          glob_pattern: '**/Hyperion-Remote*[0-999].[0-999].[0-999]*'
-          upload_url: ${{ github.event.release.upload_url }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        - name: Upload Release Artifacts
+          uses: ./.github/actions/upload-release-asset
+          with:
+            glob_pattern: '**/Hyperion-Remote*[0-999].[0-999].[0-999]*'
+            upload_url: ${{ github.event.release.upload_url }}
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   build-pwa:
     runs-on: ubuntu-latest
     name: pwa (ubuntu-latest)
@@ -86,12 +86,12 @@ jobs:
         - name: Build
           run: |
             npm install -g yarn
-            yarn run yarn:install
+            yarn yarn:install
             yarn build:pwa
-      - name: Upload Release Artifacts
-        uses: ./.github/actions/upload-release-asset
-        with:
-          glob_pattern: '**/Hyperion-Remote*[0-999].[0-999].[0-999]*'
-          upload_url: ${{ github.event.release.upload_url }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        - name: Upload Release Artifacts
+          uses: ./.github/actions/upload-release-asset
+          with:
+            glob_pattern: '**/Hyperion-Remote*[0-999].[0-999].[0-999]*'
+            upload_url: ${{ github.event.release.upload_url }}
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
