--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,66 +32,30 @@ jobs:
           upload_url: ${{ github.event.release.upload_url }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  build-spa:
-    runs-on: ubuntu-latest
-    name: spa (ubuntu-latest)
+  build-other:
+    runs-on: ${{ matrix.os }}
+    name: ${{ matrix.type }} (${{ matrix.os }})
+    strategy:
+      matrix:
+        type: [spa, spaembed, pwa]
+        os: [ubuntu-latest]
+        node: [12]
     steps:
-        - uses: actions/checkout@v1
-        - name: Setup node 12
-          uses: actions/setup-node@v1
-          with:
-            node-version: 12
-        - name: Build
-          run: |
-            npm install -g yarn
-            yarn yarn:install
-            yarn build:spa
-        - name: Upload Release Artifacts
-          uses: ./.github/actions/upload-release-asset
-          with:
-            glob_pattern: '**/Hyperion-Remote*[0-999].[0-999].[0-999]*'
-            upload_url: ${{ github.event.release.upload_url }}
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  build-spaembed:
-    runs-on: ubuntu-latest
-    name: spaembed (ubuntu-latest)
-    steps:
-        - uses: actions/checkout@v1
-        - name: Setup node 12
-          uses: actions/setup-node@v1
-          with:
-            node-version: 12
-        - name: Build
-          run: |
-            npm install -g yarn
-            yarn yarn:install
-            yarn build:spaembed
-        - name: Upload Release Artifacts
-          uses: ./.github/actions/upload-release-asset
-          with:
-            glob_pattern: '**/Hyperion-Remote*[0-999].[0-999].[0-999]*'
-            upload_url: ${{ github.event.release.upload_url }}
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  build-pwa:
-    runs-on: ubuntu-latest
-    name: pwa (ubuntu-latest)
-    steps:
-        - uses: actions/checkout@v1
-        - name: Setup node 12
-          uses: actions/setup-node@v1
-          with:
-            node-version: 12
-        - name: Build
-          run: |
-            npm install -g yarn
-            yarn yarn:install
-            yarn build:pwa
-        - name: Upload Release Artifacts
-          uses: ./.github/actions/upload-release-asset
-          with:
-            glob_pattern: '**/Hyperion-Remote*[0-999].[0-999].[0-999]*'
-            upload_url: ${{ github.event.release.upload_url }}
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v1
+      - name: Setup node ${{ matrix.node }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
+      - name: Build
+        run: |
+          npm install -g yarn
+          yarn yarn:install
+          yarn build:${{ matrix.type }}
+      - name: Upload Release Artifacts
+        uses: ./.github/actions/upload-release-asset
+        with:
+          glob_pattern: '**/Hyperion-Remote*[0-999].[0-999].[0-999]*'
+          blacklist: 'blockmap'
+          upload_url: ${{ github.event.release.upload_url }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
