--- a/package.json
+++ b/package.json
@@ -35,39 +35,44 @@
   },
   "dependencies": {
     "@jaames/iro": "^4.5.3",
-    "@quasar/app": "^1.3.1",
-    "@quasar/extras": "^1.3.3",
-    "axios": "^0.19.0",
+    "@quasar/app": "^1.5.2",
+    "@quasar/extras": "^1.5.0",
+    "axios": "^0.19.1",
+    "electron-log": "^4.0.3",
+    "electron-updater": "^4.2.0",
     "node-ssdp": "^4.0.0",
-    "quasar": "^1.5.0",
-    "vue-draggable-resizable": "^2.0.1",
-    "vue-i18n": "^8.15.1",
+    "quasar": "^1.7.4",
+    "sunrise-sunset-js": "^2.1.1",
+    "vue-draggable-resizable": "^2.1.0",
+    "vue-i18n": "^8.15.3",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.1.2",
     "vuex-persist": "^2.2.0",
-    "ws": "^7.2.0"
+    "ws": "^7.2.1"
   },
   "devDependencies": {
-    "@quasar/app": "^1.3.1",
-    "@quasar/quasar-app-extension-icon-genie": "^1.1.2",
-    "@quasar/quasar-app-extension-qscroller": "^1.0.3",
+    "@quasar/quasar-app-extension-icon-genie": "^1.1.3",
+    "@quasar/quasar-app-extension-qscroller": "^1.0.5",
     "@release-it/conventional-changelog": "^1.1.0",
-    "@vue/eslint-config-standard": "^5.0.0",
+    "@vue/eslint-config-standard": "^5.1.0",
     "babel-eslint": "^10.0.3",
     "cross-env": "^6.0.3",
     "devtron": "^1.4.0",
-    "electron": "^6.1.5",
+    "electron": "^7.1.9",
     "electron-builder": "^22.1.0",
     "electron-debug": "^3.0.1",
     "electron-devtools-installer": "^2.2.4",
-    "electron-packager": "^14.1.1",
-    "eslint": "^6.7.1",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-vue": "^6.0.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-vue": "^6.1.2",
     "gh-release": "^3.5.0",
     "release-it": "^12.4.3",
     "standard-version": "^7.0.1",
-    "webpack": "^4.41.2",
+    "webpack": "^4.41.5",
     "worker-loader": "^2.0.0"
   },
   "engines": {
