--- a/package.json
+++ b/package.json
@@ -34,17 +34,17 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@jaames/iro": "^4.5.3",
-    "@quasar/app": "^1.5.2",
-    "@quasar/extras": "^1.5.0",
-    "axios": "^0.19.1",
-    "electron-log": "^4.0.3",
-    "electron-updater": "^4.2.0",
+    "@jaames/iro": "^5.1.1",
+    "@quasar/app": "^1.5.8",
+    "@quasar/extras": "^1.5.2",
+    "axios": "^0.19.2",
+    "electron-log": "^4.0.7",
+    "electron-updater": "^4.2.2",
     "node-ssdp": "^4.0.0",
-    "quasar": "^1.7.4",
+    "quasar": "^1.9.4",
     "sunrise-sunset-js": "^2.1.1",
     "vue-draggable-resizable": "^2.1.0",
-    "vue-i18n": "^8.15.3",
+    "vue-i18n": "^8.15.4",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.1.2",
     "vuex-persist": "^2.2.0",
@@ -52,14 +52,14 @@
   },
   "devDependencies": {
     "@quasar/quasar-app-extension-icon-genie": "^1.1.3",
-    "@quasar/quasar-app-extension-qscroller": "^1.0.5",
+    "@quasar/quasar-app-extension-qscroller": "^1.0.8",
     "@release-it/conventional-changelog": "^1.1.0",
-    "@vue/eslint-config-standard": "^5.1.0",
+    "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.0.3",
-    "cross-env": "^6.0.3",
+    "cross-env": "^7.0.0",
     "devtron": "^1.4.0",
-    "electron": "^7.1.9",
-    "electron-builder": "^22.1.0",
+    "electron": "^8.0.1",
+    "electron-builder": "^22.3.2",
     "electron-debug": "^3.0.1",
     "electron-devtools-installer": "^2.2.4",
     "eslint": "^6.8.0",
@@ -68,15 +68,15 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-vue": "^6.1.2",
+    "eslint-plugin-vue": "^6.2.1",
     "gh-release": "^3.5.0",
-    "release-it": "^12.4.3",
-    "standard-version": "^7.0.1",
-    "webpack": "^4.41.5",
+    "release-it": "^12.6.1",
+    "standard-version": "^7.1.0",
+    "webpack": "^4.41.6",
     "worker-loader": "^2.0.0"
   },
   "engines": {
-    "node": ">= 8.9.0",
+    "node": ">= 10.16.0",
     "npm": ">= 5.6.0",
     "yarn": ">= 1.6.0"
   },
@@ -129,7 +129,7 @@
     },
     "github": {
       "release": true,
-      "draft": true,
+      "draft": false,
       "releaseName": "Hyperion Remote ${version}"
     },
     "plugins": {
