--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "electron-updater": "^4.2.2",
     "node-ssdp": "^4.0.0",
     "quasar": "^1.9.4",
+    "semver-parser": "^3.0.4",
     "sunrise-sunset-js": "^2.1.1",
     "vue-draggable-resizable": "^2.1.0",
     "vue-i18n": "^8.15.4",
@@ -63,11 +64,11 @@
     "electron-debug": "^3.0.1",
     "electron-devtools-installer": "^2.2.4",
     "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-loader": "^3.0.3",
     "eslint-plugin-vue": "^6.2.1",
     "gh-release": "^3.5.0",
     "release-it": "^12.6.1",
