chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "dev:spaembed": "cross-env SPAEMBED=true quasar dev",
     "dev:electron": "quasar dev -m electron",
     "dev:pwa": "quasar dev -m pwa",
+    "dev:ca-android": "quasar dev -m capacitor -T android",
     "build:spa": "quasar build && yarn run zip:spa",
     "build:spaembed": "cross-env SPAEMBED=true quasar build && yarn run zip:spaembed",
     "build:electron": "quasar build -m electron",
     "build:pwa": "quasar build -m pwa && yarn run zip:pwa",
+    "build:ca-android": "quasar build -m capacitor -T android",
     "release": "release-it",
     "release:beta": "release-it --preRelease=beta",
     "git:reset": "git reset && git checkout .",
@@ -35,17 +37,17 @@
   },
   "dependencies": {
     "@jaames/iro": "^5.1.5",
-    "@quasar/app": "^1.6.0",
-    "@quasar/extras": "^1.6.0",
+    "@quasar/app": "^1.6.1",
+    "@quasar/extras": "^1.6.1",
     "axios": "^0.19.2",
-    "electron-log": "^4.1.0",
+    "electron-log": "^4.1.1",
     "electron-updater": "^4.2.5",
     "node-ssdp": "^4.0.0",
-    "quasar": "^1.9.10",
+    "quasar": "^1.9.13",
     "semver-parser": "^3.0.4",
-    "sunrise-sunset-js": "^2.1.1",
+    "sunrise-sunset-js": "^2.1.2",
     "vue-draggable-resizable": "^2.1.0",
-    "vue-i18n": "^8.15.5",
+    "vue-i18n": "^8.16.0",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.1.3",
     "vuex-persist": "^2.2.0",
@@ -59,21 +61,21 @@
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.2",
     "devtron": "^1.4.0",
-    "electron": "^8.1.1",
+    "electron": "^8.2.0",
     "electron-builder": "^22.4.1",
     "electron-debug": "^3.0.1",
     "electron-devtools-installer": "^2.2.4",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
     "gh-release": "^3.5.0",
-    "release-it": "^13.1.2",
+    "release-it": "^13.5.1",
     "standard-version": "^7.1.0",
-    "webpack": "^4.42.0",
+    "webpack": "^4.42.1",
     "worker-loader": "^2.0.0"
   },
   "engines": {
