--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ node_modules
 /src-cordova/platforms
 /src-cordova/plugins
 /src-cordova/www
+/src-capacitor/www
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
