--- a/src-capacitor/android/app/src/main/assets/capacitor.config.json
+++ b/src-capacitor/android/app/src/main/assets/capacitor.config.json
@@ -3,8 +3,5 @@
   "appName": "Hyperion Remote",
   "bundledWebRuntime": false,
   "npmClient": "yarn",
-  "webDir": "www",
-  "server": {
-    "url": "http://192.168.0.96:8080"
-  }
+  "webDir": "www"
 }
