--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,3 +59,44 @@ jobs:
           upload_url: ${{ github.event.release.upload_url }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  build-ca-android:
+    runs-on: ubuntu-latest
+    name: Android (ca)
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup node 12
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - name: Setup JDK 8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 8
+          java-package: jdk
+      - name: Build
+        run: |
+          npm install -g yarn
+          yarn yarn:install
+          yarn build:ca-android
+      - name: Signing APK
+        uses: r0adkll/sign-android-release@v1
+        with:
+          releaseDirectory: /dist/capacitor/android/apk/release
+          signingKeyBase64: ${{ secrets.REMOTE_ANDR_SIGNING_KEY }}
+          alias: ${{ secrets.REMOTE_ANDR_ALIAS }}
+          keyStorePassword: ${{ secrets.REMOTE_ANDR_KEY_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.REMOTE_ANDR_KEY_PASSWORD }}
+#      - name: Push to Play Store
+#        uses: r0adkll/upload-google-play@v1
+#        with:
+#          serviceAccountJsonPlainText: ${{ secrets.REMOTE_ANDR_SERVICE_ACC }}
+#          packageName: org.hyperion.project.remote
+#          releaseFile: ${{ env.SIGNED_RELEASE_FILE }}
+#          track: alpha
+      - name: Upload Release Artifacts
+        uses: ./.github/actions/upload-release-asset
+        with:
+          glob_pattern: '**/*signed*.apk'
+          upload_url: ${{ github.event.release.upload_url }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
