--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,7 +96,7 @@ jobs:
       - name: Upload Release Artifacts
         uses: ./.github/actions/upload-release-asset
         with:
-          glob_pattern: '**/*signed*.apk'
+          glob_pattern: '**/*-signed.apk'
           upload_url: ${{ github.event.release.upload_url }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
