--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@release-it/conventional-changelog": "^1.1.3",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
     "devtron": "^1.4.0",
     "electron": "^8.2.3",
