--- a/package.json
+++ b/package.json
@@ -39,18 +39,20 @@
   },
   "dependencies": {
     "@ionic/pwa-elements": "^1.5.2",
-    "@jaames/iro": "^5.1.7",
-    "@quasar/app": "^1.7.4",
-    "@quasar/extras": "^1.6.4",
+    "@jaames/iro": "^5.1.8",
+    "@quasar/app": "^1.8.4",
+    "@quasar/extras": "^1.7.0",
     "axios": "^0.19.2",
-    "electron-log": "^4.1.1",
-    "electron-updater": "^4.2.5",
+    "electron-log": "^4.1.2",
+    "electron-updater": "^4.3.1",
+    "global": "^4.4.0",
     "node-ssdp": "^4.0.0",
-    "quasar": "^1.9.16",
+    "quasar": "^1.10.5",
     "semver-parser": "^3.0.4",
     "sunrise-sunset-js": "^2.1.2",
-    "vue-draggable-resizable": "^2.1.2",
-    "vue-i18n": "^8.17.3",
+    "vls": "^0.2.0",
+    "vue-draggable-resizable": "^2.2.0",
+    "vue-i18n": "^8.17.4",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.3.0",
     "vuex-persist": "^2.2.0",
@@ -58,14 +60,14 @@
   },
   "devDependencies": {
     "@quasar/quasar-app-extension-qscroller": "^1.0.8",
-    "@release-it/conventional-changelog": "^1.1.3",
+    "@release-it/conventional-changelog": "^1.1.4",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
     "devtron": "^1.4.0",
-    "electron": "^8.2.3",
-    "electron-builder": "^22.5.1",
+    "electron": "^8.2.5",
+    "electron-builder": "^22.6.0",
     "electron-debug": "^3.0.1",
     "electron-devtools-installer": "^3.0.0",
     "eslint": "^6.8.0",
@@ -76,7 +78,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
     "gh-release": "^3.5.0",
-    "release-it": "^13.5.5",
+    "release-it": "^13.5.8",
     "standard-version": "^7.1.0",
     "webpack": "^4.43.0",
     "worker-loader": "^2.0.0"
